Renamed and reworked SQL in dao method, added DB transaction support
Added a dao method to check additonal uniqueness constraint in auth
rule.

Changed stream.foreach(if(...)...) tow stream.filter(...).foreach(...)